# codeturtle

./: .gitignore  PROJECT_REPORT.md  README.md  README.txt  codeturtle.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  project_config.py  settings.py
docs/: future_roadmap.md  technical_architecture.md  usage_guide.md
scripts/: collect_data.py  export_onnx.py  extract_features.py  run_analysis.py  train_gnn.py  verify_onnx.py
src/: __init__.py  utils.py
src/clustering/: __init__.py  analysis.py  clusterer.py
src/collector/: __init__.py  file_filter.py  github_client.py
src/detection/: __init__.py  anomaly.py  rules.py
src/features/: __init__.py  embeddings.py  gnn.py  graph_converter.py  structural.py  vector_store.py
src/preprocessor/: __init__.py  ast_parser.py  cleaner.py
src/visualization/: __init__.py  dashboard.py  html_report.py  plots.py
tests/: conftest.py  test_anomaly.py  test_ast_parser.py  test_batch_processing.py  test_cleaner.py  test_config.py  test_fallback.py  test_features.py  test_gnn.py  test_html_report.py  test_vector_store.py
