[project]
name = "codeturtle"
version = "0.1.0"
description = "Discover hidden programming patterns in GitHub code using structural analysis and semantic embeddings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CodeTurtle Team" }
]

dependencies = [
    # Core ML & Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    # Deep Learning & Code Embeddings (GPU-enabled)
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    # Web Dashboard
    "streamlit>=1.29.0",
    # GitHub Data Collection
    "requests>=2.31.0",
    "GitPython>=3.1.40",
    # Code Analysis Utilities
    "astor>=0.8.1",
    # Vector Storage for Embedding Cache
    "chromadb>=1.4.0,<2.0.0",
    # ONNX Runtime for Optimized Inference
    "optimum[onnxruntime]>=1.16.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    # GNN (Graph Neural Networks)
    "torch_geometric>=2.5.0",
    "networkx>=3.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
]

[project.scripts]
codeturtle-collect = "scripts.collect_data:main"
codeturtle-analyze = "scripts.run_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
